--- a/css/scss/_site-header.scss
+++ b/css/scss/_site-header.scss
@@ -130,7 +130,7 @@ a {
     background-color: $secondary-color;
     border-right: 1px solid $border-color-01;
     //box-shadow: +5px 0px 5px rgba(0, 0, 0, 0.2);
-    transition: 0.3s ease-out;
+    transition: 0.25s ease-out;
 
     .primary-menu-header {
       color: $main-color;
@@ -269,7 +269,7 @@ a {
   #left-sidebar-active:checked ~ .primary-menu {
     left: 0;
   }
-  #left-sidebar-active:checked ~ #overlay {
+  /*#left-sidebar-active:checked ~ #overlay {
     height: 100%;
     width: 100%;
     position: fixed;
@@ -277,7 +277,7 @@ a {
     left: 0;
     z-index: 9;
     background: rgba(0, 0, 0, 0.35);
-  }
+  }*/
 
   .secondary-menu {
     a {
