--- a/css/scss/_site-header.scss
+++ b/css/scss/_site-header.scss
@@ -10,8 +10,8 @@
 }
 
 header {
-  min-height: 3.5em;
-  max-width: 160em;
+  min-height: 2.8rem;
+  max-width: 131.25rem; //2100px
   display: flex;
   padding: 0;
   margin: auto;
@@ -42,13 +42,12 @@ a {
 
 .primary-menu {
   position: absolute;
-  margin-left: 1em;
+  margin-left: 0.8rem;
   overflow: hidden;
-  //overflow: auto;
 
   a {
-    padding: 0.5em 0.5em;
-    margin-right: 0.5em;
+    padding: 0.4rem 0.4rem;
+    margin-right: 0.4rem;
 
     border: 1px solid $border-color-02;
     border-radius: 4px;
@@ -69,11 +68,11 @@ a {
 }
 
 .secondary-menu {
-  margin-right: 1em;
+  margin-right: 0.8rem;
 
   a {
-    padding: 0.25em 0.25em;
-    margin-left: 0.5em;
+    padding: 0.2rem 0.2rem;
+    margin-left: 0.4rem;
 
     border: 1px solid $border-color-02;
     border-radius: 4px;
@@ -98,7 +97,7 @@ a {
   position: absolute;
   left: 50%;
   top: 30%;
-  height: 1.2rem;
+  height: 1.15rem;
   transform: translateX(-50%);
 }
 
@@ -112,7 +111,7 @@ a {
 @media only screen and (max-width: 51.5625em) {
   .nav-icon.menu-search {
     display: inline-block;
-    margin-left: 0.7em;
+    margin-left: 0.7rem;
     min-height: 2.375rem;
     min-width: 2.375rem;
   }
@@ -129,7 +128,6 @@ a {
 
     background-color: $secondary-color;
     border-right: 1px solid $border-color-01;
-    //box-shadow: +5px 0px 5px rgba(0, 0, 0, 0.2);
     transition: 0.25s ease-out;
 
     .primary-menu-header {
@@ -152,30 +150,29 @@ a {
       justify-content: flex-end;
 
       h2 {
-        //font-family: "open-sans-regular";
         position: absolute;
-        top: 1.25em;
+        top: 1.1rem;
         left: 45%;
       }
 
       .nav-icon.close {
-        margin: 0.5em 0.7em;
-        min-height: 2rem; //38px
-        min-width: 2rem; //38px
+        margin: 0.4rem 0.6rem;
+        min-height: 2rem;
+        min-width: 2rem;
       }
     }
 
     .nav-icon.search {
       display: block;
       position: absolute;
-      margin: 0.9em;
+      margin: 0.7rem 0.7rem 0.7rem 1rem;
       fill: $search-bar-color;
     }
 
     #left-sidebar-search {
       display: block;
       width: 100%;
-      padding: 1.1em 1.2em 1em 3.3em;
+      padding: 0.85rem 1.2rem 0.85rem 3.3rem;
       color: $search-bar-color;
       background-color: $secondary-color;
 
@@ -195,8 +192,8 @@ a {
 
     a {
       font-size: 0.875rem;
-      padding: 1.2em 1.2em;
-      margin-right: 0em;
+      padding: 1rem 1rem;
+      margin-right: 0rem;
       width: 100%;
 
       border-top: 0px;
@@ -234,10 +231,10 @@ a {
       }
 
       .first-link-with-margin {
-        margin-top: 3.5em;
+        margin-top: 3.5rem;
       }
       .last-link-with-margin {
-        margin-bottom: 3.5em;
+        margin-bottom: 3.5rem;
       }
     }
 
@@ -253,7 +250,7 @@ a {
       }
 
       img {
-        margin: 1em 0.2em 1em 0.2em;
+        margin: 1rem 0.2rem 1rem 0.2rem;
       }
     }
   }
@@ -269,15 +266,6 @@ a {
   #left-sidebar-active:checked ~ .primary-menu {
     left: 0;
   }
-  /*#left-sidebar-active:checked ~ #overlay {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9;
-    background: rgba(0, 0, 0, 0.35);
-  }*/
 
   .secondary-menu {
     a {
@@ -301,7 +289,8 @@ a {
   }
 }
 
-@media only screen and (max-width: 650px) {
+//650px
+@media only screen and (max-width: 40.625em) {
   .primary-menu {
     width: 100%;
     box-shadow: none;
