--- a/css/scss/_homepage.scss
+++ b/css/scss/_homepage.scss
@@ -1,7 +1,7 @@
 .hero-image {
   position: absolute;
   left: 0;
-  height: 46.875rem; // 750px
+  height: 46.875rem; //750px
   width: 100%;
   z-index: -1;
   background-color: $secondary-color;
@@ -82,25 +82,25 @@
 @media only screen and (max-width: 68.75em) {
   .hero-image.first {
     background-size: 1200px;
-    height: 43.75rem; // 700px
+    height: 43.75rem; //700px
   }
 
   .hero-image.second {
     top: 43.75rem + 2.8rem;
     background-size: 1200px;
-    height: 43.75rem; // 700px
+    height: 43.75rem;
   }
 
   .hero-image.third {
     top: 2 * 43.75rem + 2.8rem;
     background-size: 1200px;
-    height: 43.75rem; // 700px
+    height: 43.75rem;
   }
 
   .hero-image.fourth {
     top: 3 * 43.75rem + 2.8rem;
     background-size: 1200px;
-    height: 43.75rem; // 700px
+    height: 43.75rem;
   }
 }
 
@@ -108,25 +108,25 @@
 @media only screen and (max-width: 51.5625em) {
   .hero-image.first {
     background-size: 1000px;
-    height: 40.625rem; // 650px
+    height: 40.625rem; //650px
   }
 
   .hero-image.second {
     top: 40.625rem + 2.8rem;
     background-size: 1000px;
-    height: 40.625rem; // 650px
+    height: 40.625rem;
   }
 
   .hero-image.third {
     top: 2 * 40.625rem + 2.8rem;
     background-size: 1000px;
-    height: 40.625rem; // 650px
+    height: 40.625rem;
   }
 
   .hero-image.fourth {
     top: 3 * 40.625rem + 2.8rem;
     background-size: 1000px;
-    height: 40.625rem; // 650px
+    height: 40.625rem;
   }
 }
 
@@ -134,25 +134,25 @@
 @media only screen and (max-width: 42.5em) {
   .hero-image.first {
     background-size: 800px;
-    height: 37.5rem; // 600px
+    height: 37.5rem; //600px
   }
 
   .hero-image.second {
     top: 37.5rem + 2.8rem;
     background-size: 800px;
-    height: 37.5rem; // 600px
+    height: 37.5rem;
   }
 
   .hero-image.third {
     top: 2 * 37.5rem + 2.8rem;
     background-size: 800px;
-    height: 37.5rem; // 600px
+    height: 37.5rem;
   }
 
   .hero-image.fourth {
     top: 3 * 37.5rem + 2.8rem;
     background-size: 800px;
-    height: 37.5rem; // 600px
+    height: 37.5rem;
   }
 }
 
@@ -160,25 +160,25 @@
 @media only screen and (max-width: 34.375em) {
   .hero-image.first {
     background-size: 600px;
-    height: 34.375rem; // 550px
+    height: 34.375rem; //550px
   }
 
   .hero-image.second {
     top: 34.375rem + 2.8rem;
     background-size: 600px;
-    height: 34.375rem; // 550px
+    height: 34.375rem;
   }
 
   .hero-image.third {
     top: 2 * 34.375rem + 2.8rem;
     background-size: 600px;
-    height: 34.375rem; // 550px
+    height: 34.375rem;
   }
 
   .hero-image.fourth {
     top: 3 * 34.375rem + 2.8rem;
     background-size: 600px;
-    height: 34.375rem; // 550px
+    height: 34.375rem;
   }
 }
 
@@ -186,28 +186,28 @@
 @media only screen and (max-width: 26.25em) {
   .hero-image.first {
     background-size: 450px;
-    height: 31.25rem; // 500px
+    height: 31.25rem; //500px
     background-position-y: 10%;
   }
 
   .hero-image.second {
     top: 31.25rem + 2.8rem;
     background-size: 450px;
-    height: 31.25rem; // 500px
+    height: 31.25rem;
     background-position-y: -20%;
   }
 
   .hero-image.third {
     top: 2 * 31.25rem + 2.8rem;
     background-size: 450px;
-    height: 31.25rem; // 500px
+    height: 31.25rem;
     background-position-y: -20%;
   }
 
   .hero-image.fourth {
     top: 3 * 31.25rem + 2.8rem;
     background-size: 450px;
-    height: 31.25rem; // 500px
+    height: 31.25rem;
     background-position-y: -20%;
   }
 }
