--- a/css/scss/_site-header.scss
+++ b/css/scss/_site-header.scss
@@ -107,13 +107,14 @@ a {
   display: none;
 }
 
-//825px
+//---- media query pre 825px a menej ----
+
 @media only screen and (max-width: 51.5625em) {
   .nav-icon.menu-search {
     display: inline-block;
     margin-left: 0.7rem;
-    min-height: 2.375rem;
-    min-width: 2.375rem;
+    min-height: 2.2rem;
+    min-width: 2.2rem;
   }
 
   .primary-menu {
@@ -123,7 +124,7 @@ a {
     top: 0;
     left: -100%;
     z-index: 10;
-    width: 70%;
+    width: 100%;
     height: 100%;
 
     background-color: $secondary-color;
@@ -148,17 +149,19 @@ a {
 
     label {
       justify-content: flex-end;
+      min-height: 2.875rem;
 
       h2 {
         position: absolute;
-        top: 1.1rem;
+        font-size: 0.875rem;
+        top: 1rem;
         left: 45%;
       }
 
       .nav-icon.close {
         margin: 0.4rem 0.6rem;
-        min-height: 2rem;
-        min-width: 2rem;
+        min-height: 1.8rem;
+        min-width: 1.8rem;
       }
     }
 
@@ -286,12 +289,5 @@ a {
   .nav-icon.saved-items,
   .nav-icon.account {
     display: none;
-  }
-}
-
-//650px
-@media only screen and (max-width: 40.625em) {
-  .primary-menu {
-    width: 100%;
   }
 }
