--- a/css/main.css
+++ b/css/main.css
@@ -103,8 +103,8 @@ a {
   .nav-icon.menu-search {
     display: inline-block;
     margin-left: 0.7rem;
-    min-height: 2.375rem;
-    min-width: 2.375rem;
+    min-height: 2.2rem;
+    min-width: 2.2rem;
   }
   .primary-menu {
     overflow-y: auto;
@@ -113,7 +113,7 @@ a {
     top: 0;
     left: -100%;
     z-index: 10;
-    width: 70%;
+    width: 100%;
     height: 100%;
     background-color: #ffffff;
     border-right: 1px solid #000000;
@@ -134,16 +134,18 @@ a {
   }
   .primary-menu label {
     justify-content: flex-end;
+    min-height: 2.875rem;
   }
   .primary-menu label h2 {
     position: absolute;
-    top: 1.1rem;
+    font-size: 0.875rem;
+    top: 1rem;
     left: 45%;
   }
   .primary-menu label .nav-icon.close {
     margin: 0.4rem 0.6rem;
-    min-height: 2rem;
-    min-width: 2rem;
+    min-height: 1.8rem;
+    min-width: 1.8rem;
   }
   .primary-menu .nav-icon.search {
     display: block;
@@ -247,11 +249,6 @@ a {
     display: none;
   }
 }
-@media only screen and (max-width: 40.625em) {
-  .primary-menu {
-    width: 100%;
-  }
-}
 .site-footer {
   position: relative;
   z-index: -10;
@@ -288,8 +285,6 @@ a {
   flex-direction: column;
   white-space: wrap;
   line-height: 1rem;
-}
-.footer-content-desktop li {
   padding: 0 0 0.8rem 0;
 }
 .footer-content-desktop a:hover {
@@ -341,10 +336,6 @@ a {
   .footer-content-tablet-mobile .accordion-content:hover {
     cursor: pointer;
   }
-  .footer-content-tablet-mobile label:hover {
-    color: #ffffff;
-    background-color: #000000;
-  }
   .footer-content-tablet-mobile ul {
     display: block;
     width: 100%;
@@ -352,26 +343,31 @@ a {
   .footer-content-tablet-mobile ul li {
     white-space: wrap;
   }
-  .footer-content-tablet-mobile ul a {
+  .footer-content-tablet-mobile ul li:last-child {
+    margin-bottom: 0.5rem;
+  }
+  .footer-content-tablet-mobile ul li a {
     width: 100%;
     padding: 1rem 1rem;
   }
-  .footer-content-tablet-mobile ul a:hover {
+  .footer-content-tablet-mobile ul li a:hover {
     text-decoration: underline;
   }
   .footer-content-tablet-mobile .accordion-label::after {
-    content: "▾";
-    display: flex;
+    content: "__";
+    display: block;
     position: absolute;
-    top: 50%;
+    top: 55%;
+    color: rgba(255, 255, 255, 0);
     transform: translateY(-50%);
+    background: url("../../images/icons/other/arrow-down-300.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
     right: 1rem;
-    font-size: 0.875rem;
+    font-size: 1.6rem;
     transition: transform 0.3s;
   }
-  .footer-content-tablet-mobile .accordion-content {
-    display: none;
-  }
+  .footer-content-tablet-mobile .accordion-content,
   .footer-content-tablet-mobile .accordion-input {
     display: none;
   }
@@ -381,9 +377,20 @@ a {
   .footer-content-tablet-mobile .accordion-input:checked ~ .accordion-label::after {
     transform: translateY(-50%) rotate(0.5turn);
   }
-  .copyright {
-    padding: 1rem 1rem;
+  div.footer-whitespace {
+    height: 2.5rem;
   }
+  /* 
+  // skryté
+  block-size: 0;
+  transition-property: block-size, content-visibility;
+  transition-duration: 0.5s;
+  transition-behavior: allow-discrete;
+
+  // viditelné
+  block-size: auto;
+  block-size: calc-size(auto);
+  */
 }
 @media only screen and (max-width: 51.5625em) {
   .site-footer {
@@ -597,7 +604,7 @@ body,
 html {
   box-sizing: border-box;
   font-family: "open-sans-regular";
-  font-size: 1rem;
+  font-size: 100%;
   -webkit-font-smoothing: antialiased;
 }
 
